--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body class="body">
     <ul class="nav">
-      <li class="logo"><a href="#">PuJan</a></li>
+      <li class="logo"><a href="#">GyN</a></li>
       <!-- <li class="listItem searchSection">
         <input type="text" class="search" placeholder="Find Your Friend" /><a
           href=""
@@ -62,8 +62,7 @@
         ><span class="goBack">
           <a href="#"><i class="fa-solid fa-right-from-bracket"></i></a>
         </span>
-        <span class="react">
-          <i class="fa-solid fa-heart"></i> </span
+        <span class="react"> <i class="fa-solid fa-heart"></i> </span
       ></span>
       <div class="container2"></div>
     </div>
